Closed
Bug 16151
Opened 25 years ago
Closed 25 years ago
File transport thread stack size too small
Categories
(Core :: Networking, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: sfraser_bugs, Assigned: warrensomebody)
Details
We had bad startup crashes on Mac because of this. I've checked in a fix to
increase the stack size to 64k; please pick a better number if necessary.
Assignee | ||
Updated•25 years ago
|
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 1•25 years ago
|
||
64k sounds good to me.
Bulk move of all Necko (to be deleted component) bugs to new Networking
component.
Updated•25 years ago
|
Status: RESOLVED → VERIFIED
Comment 3•25 years ago
|
||
marking verified per engineer's comments - design issue
You need to log in
before you can comment on or make changes to this bug.
Description
•