Fix for bug 16151; make the file transport working thread stack size 64k, instead of 8k. Fixes crashes on startup on Mac. r=beard